--- a/styles.css
+++ b/styles.css
@@ -326,6 +326,10 @@ h1 {
   font-size: 14px;
 }
 
+.card .btn {
+  margin-top: 14px;
+}
+
 .featureGrid {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
